edit tier from quant

--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -192,6 +192,9 @@
           <field name="sub_category"/>
         </field>
       </field>
+      <field name="uom_po_id" position="after">
+        <field name="is_tiered" widget="boolean_toggle"/>
+      </field>
     </record>
 
     <!-- Product Product Additions -->
