--- a/lume_sales/views/quant.xml
+++ b/lume_sales/views/quant.xml
@@ -6,7 +6,8 @@
         <field name="inherit_id" ref="stock.view_stock_quant_tree_editable"/>
         <field name="arch" type="xml">
             <field name="location_id" position="after">
-                <field name="tier"/>
+                <field name="is_tiered" invisible="1"/>
+                <field name="tier" attrs="{'invisible':[('is_tiered','=',False)],'required':[('is_tiered','=',True)],'readonly':[('is_tiered','=',False)]}"/>
             </field>
         </field>
     </record>
