varioius bug fixes

--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -153,7 +153,7 @@
           <h1 style="display: flex;">
             <field name="name" invisible="1"/>
             <field name="first_name" required="1" class="mr-5"/>
-            <field name="middle_name" required="1" class="mr-5"/>
+            <field name="middle_name" class="mr-5"/>
             <field name="last_name" required="1" class="mr-5"/>
           </h1>
         </xpath>
