[MOD] metrc receiving. - Removed warehouse-facility license requirement. - Changed the way how feild values populated after picking is validated and values are transfered to packages. - Stopped production automatic associations. - Converted facility license field on picking to   user editable. - Added facility license on packages. - Redirect user to wizard for receiving. - Modified the code so that multiple manifests coming to same facility license can be processed in batch. - One picking per manifest will be created.

--- a/metrc_stock/wizard/receive_metrc_transfer_wizard_views.xml
+++ b/metrc_stock/wizard/receive_metrc_transfer_wizard_views.xml
@@ -7,15 +7,9 @@
             <form>
                 <group>
                     <group>
-                        <field name="warehouse_id" readonly="1" options="{'no_open': True}"/>
-                        <field name="facility_license_id" options="{'no_open': True}"/>
-                        <field name="operation_type_id" domain="[('warehouse_id', '=', warehouse_id)]"/>
-                        <field name="view_location_id" invisible="1"/>
-                        <field name="location_dest_id" domain="[('location_id', '=', view_location_id)]"/>
-                    </group>
-                    <group>
-                        <field name="partner_id"/>
-                        <field name="partner_license_id" domain="[('partner_id', '=', partner_id)]"/>
+                        <field name="facility_license_id" options="{'no_open': True}" readonly="1"/>
+                        <field name="operation_type_id" options="{'no_open': True, 'no_create': True}"/>
+                        <field name="location_dest_id" options="{'no_open': True, 'no_create': True}"/>
                     </group>
                 </group>
                 <footer>
