--- a/metrc_stock/views/stock_views.xml
+++ b/metrc_stock/views/stock_views.xml
@@ -109,6 +109,9 @@
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="metrc_product_name" readonly="1"
                        attrs="{'invisible': [('metrc_product_name', '=', '')]}"/>
+                <field name="facility_license_id" readonly="1"
+                       attrs="{'invisible': [('facility_license_id', '=', False)]}"
+                       options="{'no_open': True, 'no_create': True}"/>
                 <field name="labtest_state" string="Labtesting State" readonly="1" 
                        attrs="{'invisible': [('is_metric_product', '=', False)]}" 
                        groups="metrc_base.group_metrc_user"/>
