--- a/metrc_stock/wizard/stock_package_wizard_views.xml
+++ b/metrc_stock/wizard/stock_package_wizard_views.xml
@@ -8,8 +8,10 @@
             <field name="arch" type="xml">
                 <form string="Create Transfer Manifest">
                     <group>
-                        <field name="lot_id" readonly="1" class="oe_no_button"/>
-                        <field name="product_id" readonly="1" class="oe_no_button"/>
+                        <field name="lot_id" readonly="1" class="oe_no_button"
+                               options="{'no_open': True}"/>
+                        <field name="product_id" readonly="1" class="oe_no_button"
+                               options="{'no_open': True}"/>
                     </group>
                     <group>
                         <group>
@@ -19,22 +21,26 @@
                             <label for="wh_qty_available"/>
                             <div>
                                 <field name="wh_qty_available" readonly="1" class="oe_inline" forcesave="1"/>
-                                <field name="product_uom_id" readonly="1" groups="uom.group_uom" class="oe_inline oe_no_button"/>
+                                <field name="product_uom_id" readonly="1" groups="uom.group_uom" 
+                                       class="oe_inline oe_no_button" options="{'no_open': True}"/>
                             </div>
                             <label for="virtual_available"/>
                             <div>
                                 <field name="virtual_available" readonly="1" class="oe_inline" forcesave="1"/>
-                                <field name="product_uom_id" readonly="1" groups="uom.group_uom" class="oe_inline oe_no_button"/>
+                                <field name="product_uom_id" readonly="1" groups="uom.group_uom"
+                                       class="oe_inline oe_no_button" options="{'no_open': True}"/>
                             </div>
                         </group>
                         <group>
-                            <field name="license_id" readonly="1" class="oe_no_button"/>
+                            <field name="license_id" readonly="1" class="oe_no_button"
+                                   options="{'no_open': True}"/>
                             <field name="metrc_id" readonly="1"/>
                             <field name="adjustment_required" invisible="1"/>
                             <label for="metrc_qty"/>
                             <div>
                                 <field name="metrc_qty" readonly="1" class="oe_inline" forcesave="1"/>
-                                <field name="metrc_uom_id" readonly="1" groups="uom.group_uom" class="oe_inline oe_no_button"/>
+                                <field name="metrc_uom_id" readonly="1" groups="uom.group_uom" 
+                                       class="oe_inline oe_no_button" options="{'no_open': True}"/>
                             </div>
                         </group>
                     </group>
