--- a/lume_sales/wizards/cancel_reason_wizard.xml
+++ b/lume_sales/wizards/cancel_reason_wizard.xml
@@ -11,7 +11,7 @@
                     </p>
                 <footer>
                     <button name="action_ok" string="Confirm" type="object" default_focus="1" class="oe_highlight"/>
-                    <button name="cancel" string="Cancel" class="btn-secondary" type="cancel"/>
+                    <button name="action_cancel" string="Cancel" class="btn-secondary" type="object"/>
                 </footer>
                 </form>
             </field>
