--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -31,6 +31,12 @@
     //     }
     // }
 }
+.med_card{
+    background-color: rgba(255,255,0,.1);
+}
+.adult_card{
+    background-color: rgba(0,0,255,.1);
+}
 
 .timer-normal{
     color: rgb(35, 202, 13);
