--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -157,7 +157,7 @@
                 <field name="is_tiered"/>
                 <templates>
                     <t t-name="kanban-box">
-                        <div t-attf-class="o_kanban_record d-flex o_lpc_industry_product {{record.stock_at_store.raw_value == 0 ? 'catalog_card_hide_0' : 'false_test'}}" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}" t-attf-data-qty="{{record.stock_at_store.raw_value}}">
+                        <div t-attf-class="o_kanban_record d-flex o_lpc_industry_product {{record.stock_at_store.raw_value == 0 ? 'catalog_card_hide_0' : 'false_test'}} {{record.thc_type.raw_value == 'medical' ? 'med_card' : record.thc_type.raw_value == 'adult' ? 'adult_card':''}}" style="min-height: 100px;align-items:center;" t-attf-data-type="{{record.thc_type.raw_value}}" t-attf-data-qty="{{record.stock_at_store.raw_value}}">
                             <button class="o_kanban_image" style="z-index: 50;border: none;padding: 0px;background-color: transparent;">
                                 <img t-att-src="kanban_image('stock.production.lot', 'image_128', record.id.raw_value)" alt="Product" class="o_image_64_contain"/>
                             </button>
