Product Catalog style updates

--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -32,10 +32,10 @@
     // }
 }
 .med_card{
-    background-color: rgba(255,255,0,.1);
+    background-color: rgba(255, 255, 0, 0.2) !important;
 }
 .adult_card{
-    background-color: rgba(0,0,255,.1);
+    background-color: rgba(0, 130, 255, 0.1) !important;
 }
 
 .timer-normal{
