--- a/onfleet_lume/views/views.xml
+++ b/onfleet_lume/views/views.xml
@@ -6,7 +6,7 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="base.res_config_settings_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//sheet/div[hasclass('oe_button_box')/*" position="before">
+                <xpath expr="//sheet/div[hasclass('oe_button_box')]/*" position="before">
                     <button name="retry_request" type="object" class="oe_stat_button" icon="fa-checkbox icon" attrs="{'invisible': [('onfleet_has_pending_request', '=', False)]}">
                         <div class="o_field_widget o_stat_info">
                             <span class="o_stat_text">Resend to OnFleet</span>
