--- a/onfleet_lume/views/views.xml
+++ b/onfleet_lume/views/views.xml
@@ -4,7 +4,7 @@
         <record id="sale_order_onfleet_form" model="ir.ui.view">
             <field name="name">sale.order.onfleet.form</field>
             <field name="model">sale.order</field>
-            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+            <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//sheet/div[hasclass('oe_button_box')]/*" position="before">
                     <button name="retry_request" type="object" class="oe_stat_button" icon="fa-checkbox icon" attrs="{'invisible': [('onfleet_has_pending_request', '=', False)]}">
