--- a/onfleet_lume/views/views.xml
+++ b/onfleet_lume/views/views.xml
@@ -7,6 +7,7 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//sheet/div[hasclass('oe_button_box')]/*" position="before">
+                    <field name="onfleet_has_pending_request" invisible="1"/>
                     <button name="retry_request" type="object" class="oe_stat_button" icon="fa-checkbox icon" attrs="{'invisible': [('onfleet_has_pending_request', '=', False)]}">
                         <div class="o_field_widget o_stat_info">
                             <span class="o_stat_text">Resend to OnFleet</span>
