--- a/metrc_product/views/metrc_item_category_view.xml
+++ b/metrc_product/views/metrc_item_category_view.xml
@@ -45,26 +45,26 @@
                         </group>
                         <group>
                             <group>
-                                <field name="approval"/>
-                                <field name="strain"/>
-                                <field name="item_brand"/>
-                                <field name="administration_method"/>
-                                <field name="servingsize"/>
-                                <field name="supplydurationdays"/>
-                                <field name="qty_uom_name"/>
-                                <field name="qty_multiplier"/>
-                                <field name="ingredients"/>
+                                <field name="approval" eadonly="1"/>
+                                <field name="strain" readonly="1"/>
+                                <field name="item_brand" readonly="1"/>
+                                <field name="administration_method" readonly="1"/>
+                                <field name="servingsize" readonly="1"/>
+                                <field name="supplydurationdays" readonly="1"/>
+                                <field name="qty_uom_name" readonly="1"/>
+                                <field name="qty_multiplier" readonly="1"/>
+                                <field name="ingredients" readonly="1"/>
                             </group>
                             <group>
-                                <field name="cbdpercent"/>
-                                <field name="cbdcontent"/>
-                                <field name="thcpercent"/>
-                                <field name="thccontent"/>
-                                <field name="unitvolume"/>
-                                <field name="unitweight"/>
-                                <field name="productphoto"/>
-                                <field name="cancontainseeds"/>
-                                <field name="canberemediated"/>
+                                <field name="cbdpercent" readonly="1"/>
+                                <field name="cbdcontent" readonly="1"/>
+                                <field name="thcpercent" readonly="1"/>
+                                <field name="thccontent" readonly="1"/>
+                                <field name="unitvolume" readonly="1"/>
+                                <field name="unitweight" readonly="1"/>
+                                <field name="productphoto" readonly="1"/>
+                                <field name="cancontainseeds" readonly="1"/>
+                                <field name="canberemediated" readonly="1"/>
                             </group>
                         </group>
                     </sheet>
