--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -13,7 +13,8 @@
                     <field name="move_line_id" invisible="1"/>
                     <field name="product_name" readonly="1"/>
                     <field name="product_category_name" invisible="1"/>
-                    <field name="package_label" readonly="1"/>
+                    <field name="package_label" invisible="1"/>
+                    <field name="package_label_short" readonly="1"/>
                     <field name="alias_products" invisible="1"/>
                     <field name="shipment_package_state" invisible="1"/>
                     <field name="manifest_status" invisible="1"/>
@@ -27,7 +28,6 @@
                     <field name="manifest_number" invisible="1"/>
                     <field name="received_quantity" string="Total Received" readonly="1"/>
                     <field name="received_unit_of_measure_name" string="Received UOM" readonly="1"/>
-                    <field name="shipper_facility_name" string="shipper Facility" readonly="1"/>
                     <field name="shipper_facility_license_number" string="Shipper License" readonly="1"/>
                     <field name="is_flower" invisible="1"/>
                     <field name="is_edible" invisible="1"/>
