[MOD] made the metrc location on odoo location field many2many. - Because on odoo location can have metrc locations from multiple facilities. - Improvements on metrc item category views.

--- a/metrc_product/views/metrc_item_category_view.xml
+++ b/metrc_product/views/metrc_item_category_view.xml
@@ -45,7 +45,7 @@
                         </group>
                         <group>
                             <group>
-                                <field name="approval" eadonly="1"/>
+                                <field name="approval" readonly="1"/>
                                 <field name="strain" readonly="1"/>
                                 <field name="item_brand" readonly="1"/>
                                 <field name="administration_method" readonly="1"/>
