--- a/metrc_stock/views/stock_location_views.xml
+++ b/metrc_stock/views/stock_location_views.xml
@@ -6,7 +6,8 @@
         <field name="inherit_id" ref="stock.view_location_form"/>
         <field name="arch" type="xml">
             <field name="usage" position="after">
-                <field name="metrc_location_id" options="{'no_create': True}"/>
+                <field name="metrc_location_ids" options="{'no_create': True}"
+                       widget="many2many_tags"/>
             </field>
         </field>
     </record>
